# UCSC-Embedded-Firmware-Essentials-Class

./: .gitignore  README.md
esp32-shell/: .gitignore  CMakeLists.txt  README.md  build.sh  partitions.csv  sdkconfig.defaults
esp32-shell/docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
esp32-shell/main/: CMakeLists.txt  esp_shell.c  esp_shell.h  executor_esp32.c  executor_esp32.h  main.c  parser_esp32.c  parser_esp32.h  platform.h  platform_esp32.c  platform_linux.c  shell_config.h  shell_vfs.h  terminal_esp32.c  terminal_esp32.h  threading_esp32.h  vfs_esp32.c  vfs_linux.c
esp32-shell/tests/: test_esp32.sh  test_esp32_device.py
led_sequence/: CMakeLists.txt  partition.csv
led_sequence/main/: CMakeLists.txt  main.c
seven_segment_counter/: CMakeLists.txt
seven_segment_counter/main/: CMakeLists.txt  main.c
week1/: AI_Interaction.md  Espressif-Doc.md  prompts.md  prompts2.md
week3/: AgentConstraints.md
week3/task_priority/: CMakeLists.txt  README.md
week3/task_priority/main/: CMakeLists.txt  main.c
